--- a/src/components/navigation/mobileNavigation.scss
+++ b/src/components/navigation/mobileNavigation.scss
@@ -103,6 +103,12 @@
                     display: none;
                 }
             }
+
+            @media (max-width:767px) {
+                strong {
+                    display: none;
+                }
+            }
         }
     }
 
