--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,6 +11,10 @@ footer {
   font-weight: 300;
   text-align: center;
 
+  @media (max-width: 767px) {
+    padding-bottom: 100px;
+  }
+
   .footer-text {
     vertical-align: middle;
     p {
