--- a/src/components/navigation/mobileNavigation.scss
+++ b/src/components/navigation/mobileNavigation.scss
@@ -8,7 +8,7 @@
     border-radius: 30px;
     left: 10px;
     background-color: $brand-color-light;
-    box-shadow: 0px 0px 20px 5px rgba(0,0,0,.3);
+    box-shadow: 0 0 20px 5px rgba(0,0,0,.3);
     z-index: 1000;
     transition: border-radius .3s ease-in-out, right .3s ease-in-out;
     overflow: hidden;
@@ -104,10 +104,8 @@
                 }
             }
 
-            @media (max-width:767px) {
-                strong {
-                    display: none;
-                }
+            strong {
+                display: none;
             }
         }
     }
